crates/core/tests/snapshots/integration__backup-dir-summary-first-nix.snap
---
source: crates/core/tests/integration.rs
expression: TestSummary(&first_snapshot)
---
TestSnap {
    hostname: "",
    paths: StringList(
        [
            "test",
        ],
    ),
    label: "",
    tags: StringList(
        [],
    ),
    files_new: 73,
    files_changed: 0,
    files_unmodified: 0,
    total_files_processed: 73,
    total_bytes_processed: 1125674,
    dirs_new: 5,
    dirs_changed: 0,
    dirs_unmodified: 0,
    total_dirs_processed: 5,
    data_blobs: 70,
    tree_blobs: 5,
    data_added_files: 1125653,
    data_added_files_packed: 78740,
}
