crates/core/tests/snapshots/integration__backup-exclude-xattr-nix.snap
---
source: crates/core/tests/integration.rs
expression: snap
---
[
  "test",
  "test/keep-dir",
  "test/keep-dir/nested.txt",
  "test/keep.txt",
]
