crates/core/tests/snapshots/integration__backup-tar-summary-first-nix.snap
---
source: crates/core/tests/integration.rs
expression: snap
---
SnapshotFile(
  time: "[time]",
  program_version: "rustic [rustic_core_version]",
  tree: "[tree_id]",
  paths: StringList([
    "test",
  ]),
  hostname: "[hostname]",
  username: "",
  uid: 0,
  gid: 0,
  tags: StringList([]),
  summary: Some(SnapshotSummary(
    files_new: 73,
    files_changed: 0,
    files_unmodified: 0,
    total_files_processed: 73,
    total_bytes_processed: 1125674,
    dirs_new: 6,
    dirs_changed: 0,
    dirs_unmodified: 0,
    total_dirs_processed: 6,
    total_dirsize_processed: "[total_dirsize_processed]",
    data_blobs: 70,
    tree_blobs: 6,
    data_added: "[data_added]",
    data_added_packed: "[data_added_packed]",
    data_added_files: 1125653,
    data_added_files_packed: 78740,
    data_added_trees: "[data_added_trees]",
    data_added_trees_packed: "[data_added_trees_packed]",
    command: "[command]",
    backup_start: "[backup_start]",
    backup_end: "[backup_end]",
    backup_duration: "[backup_duration]",
    total_duration: "[total_duration]",
    error_count: 0,
  )),
  id: "[id]",
)
